--- a/Cluster/Cluster.csproj
+++ b/Cluster/Cluster.csproj
@@ -65,6 +65,8 @@
     <Compile Include="DataReader.cs" />
     <Compile Include="Distance.cs" />
     <Compile Include="Flow.cs" />
+    <Compile Include="Graph.cs" />
+    <Compile Include="GraphNode.cs" />
     <Compile Include="MainWindow.xaml.cs">
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
